Adding tests for Guide Router